Fixed Header Alignment

--- a/WorkflowPage/docs.webmethods.io/integration/style.css
+++ b/WorkflowPage/docs.webmethods.io/integration/style.css
@@ -4665,7 +4665,7 @@ div.gsc-above-wrapper-area * {
 }
 
 .nav-header .img-responsive.no-zoom {
-    margin: 12px 0px 20px;
+    margin: 5px 0px 20px;
     width: 22px;
     height: 46px
 }
